--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,9 +67,9 @@ springdoc:
   api-docs:
     path: /v3/api-docs
   group-configs:
-    - group: 'dubbo-provider'
+    - group: 'life'
       paths-to-match: '/**'
-      packages-to-scan: qtx.dubbo
+      packages-to-scan: com.tqsm.life
 # knife4j的增强配置，不需要增强可以不配
 knife4j:
   enable: true
